src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Caliber_Flag_Notes__c</fullName>
        <label>Caliber Flag Notes</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Caliber_Flag_Status__c</fullName>
        <label>Caliber Flag Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Trainer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastEducation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Education</label>
        <referenceTo>Education__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastRProProject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Rpro Project</label>
        <referenceTo>RevatureProProject__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastScreening__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Screening</label>
        <referenceTo>Screening__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastTrainingClass__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Training Class</label>
        <referenceTo>Training_Assignment__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_Stage__c</fullName>
        <label>Master Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Career Coach</fullName>
                </value>
                <value>
                    <fullName>Not Considering</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Qualifying</fullName>
                </value>
                <value>
                    <fullName>Recruitment</fullName>
                </value>
                <value>
                    <fullName>Screening</fullName>
                </value>
                <value>
                    <fullName>Selected</fullName>
                </value>
                <value>
                    <fullName>Staging</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PreTrainingStatus__c</fullName>
        <label>Pre Training Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PreTraining__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre Training</label>
        <referenceTo>Training__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PublsihedPortfolioLink__c</fullName>
        <label>Published Portfolio Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Recruiter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recruiter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Skill_Type__c</fullName>
        <label>Skill Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>J2EE</fullName>
                </value>
                <value>
                    <fullName>.NET</fullName>
                </value>
                <value>
                    <fullName>Quality Analysis</fullName>
                </value>
                <value>
                    <fullName>Web Tools</fullName>
                </value>
                <value>
                    <fullName>Informatica</fullName>
                </value>
                <value>
                    <fullName>Big Data/Hadoop</fullName>
                </value>
                <value>
                    <fullName>SharePoint</fullName>
                </value>
                <value>
                    <fullName>Cobol</fullName>
                </value>
                <value>
                    <fullName>Mainframe</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
                <value>
                    <fullName>Business Analysis</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>SQL</fullName>
                </value>
                <value>
                    <fullName>Networking</fullName>
                </value>
                <value>
                    <fullName>Drupal</fullName>
                </value>
                <value>
                    <fullName>User Interface</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>DBA</fullName>
                </value>
                <value>
                    <fullName>Technical Writing</fullName>
                </value>
                <value>
                    <fullName>Web designing</fullName>
                </value>
                <value>
                    <fullName>Systems Administration</fullName>
                </value>
                <value>
                    <fullName>TIBCO</fullName>
                </value>
                <value>
                    <fullName>iOS</fullName>
                </value>
                <value>
                    <fullName>Android</fullName>
                </value>
                <value>
                    <fullName>ETL/Abinitio</fullName>
                </value>
                <value>
                    <fullName>Salesforce Developer</fullName>
                </value>
                <value>
                    <fullName>Salesforce Administrator</fullName>
                </value>
                <value>
                    <fullName>SCRUM</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Microstrategy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>